# small-frame-demo

./: .gitignore  readme.md
0-fast-starter/_template/: build-j17-g8x.gradle  build.gradle
1-c-test/base-test/: .gitignore  CMakeLists.txt  main.cpp  person.txt
1-py-test/OpenCV-test/: readme.md  requirements.txt
1-py-test/ai_study/: .gitignore  requirements.txt
1-py-test/base-test/: readme.md  requirements.txt
1-py-test/hugging-test/: readme.md  requirements.txt
1-py-test/model-train/: readme.md  requirements.txt
1-py-test/modelscope-test/: readme.md  requirements.txt
1-py-test/modelspace-test/: readme.md  requirements.txt
1-py-test/old-framework-test/: readme.md  requirements.txt
1-py-test/others-test/uv-test/: .gitignore  main.py  pyproject.toml  readme.md  requirements.txt
1-py-test/others-test/uv-test/py/: test.py  test2.py
AI-demo/librec-demo/: build.gradle  readme.md
AI-demo/neuroph-demo/: build.gradle  mySamplePerceptron.nnet
DI-frame/guice-demo/: build.gradle  readme.md
GUI-demo/javafx-misc-test/: build.gradle  readme.md
GUI-demo/javafx-rest-test/: build.gradle  readme.md
GUI-demo/javafx-simple-test/: .gitignore  build.gradle  readme.md
_template/: build-eclipse.gradle  build.gradle
apache-poi-demo/: build.gradle
disruptor-demo/: build.gradle
drools-demo/: readme.md
guess-encoding/: build.gradle
jdk-demo/: .gitignore
jexl3-demo/: build.gradle  readme.md
jol-demo/: build.gradle
json-path-demo/: build.gradle
junit-demo/: .gitignore
poi-demo/: build.gradle
tensorflow-demo/: build.gradle
util-test/: readme.md
(+2634 files in other folders)
