[project]
name = "uv-test"
version = "0.1.0"
description = "UV 测试"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "pandas==2.3.3",
    "requests==2.32.5",
]

# 告诉 uv 把这个项目当作包来处理
[tool.uv]
package = true

## 标准打包配置
#[build-system]
#requires = ["setuptools>=61.0"]
#build-backend = "setuptools.build_meta"

# 设置运行命令
# 没有上面的 tool.uv.package = true 或 [build-system] 设置，不能执行下面的命令
[project.scripts]
hello = "py.test:hello"  # 定义了一个名为 hello 的命令，执行 uv run hello